<resources>
    <string name="app_name">HW#2:Ng Ho Ting</string>
    <string name="sex_hint">(Male / Female)</string>
    <string name="age_hint">(Input age)</string>
    <string name="sex_text_view">sex</string>
    <string name="age_text_view">age</string>
    <string name="submit_button">Submit</string>
    <string name="suggestions_text_view">Suggestions: </string>

    <string name="age_input_error">Age input error. Please input again!</string>
    <string name="sex_input_error">Sex input error. Please input again!</string>
    <string name="not_hurry_result">Not hurry!</string>
    <string name="get_marry_result">Get marry!</string>
    <string name="find_couple_result">Find couple</string>
    <string name="sex_male">male</string>
    <string name="sex_female">female</string>
</resources>
